# pydepsync

./: Cargo.toml  README.md
.github/workflows/: checks.yml  release.yml
example_app/: .pydepsync.toml
src/: cli.rs  config.rs  dependency.rs  main.rs  pyproject.rs
src/engine/: evaluator.rs  finder.rs  mod.rs  resolver.rs
