[package]
name = "pydepsync"
version = "0.1.3"
edition = "2021"

[dependencies]
rustpython-parser = "0.4.0"
walkdir = "2.3"
regex = "1.11.1"
serde_json = "1.0.140"
log = "0.4.26"
simple_logger = "5.0.0"
toml_edit = "0.22.24"
taplo = "0.13.2"
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "2.0.12"
ureq = { version = "3.0.9", features = ["json"] }
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
strip = true  # Remove debug symbols
opt-level = 3 # Maximize optimization
